@@ -1,3 +1,7 @@
+2011-01-21  Ingo Renner  <ingo@typo3.org>
+
+	* Fixed issues #17188: change status update task to use the new default From email address setting from config_default
+
 2011-01-18  Ingo Renner  <ingo@typo3.org>
 
 	* Added feature #17101: Warning in reports module for enabled PHP safe_mode, credits Christian Kuhn
